--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
         "jsonc-parser": "^3.3.1",
         "next": "14.1.0",
         "nodemailer": "^7.0.11",
-        "@anthropic-ai/sdk": "^0.32.1",
+        "openai": "^4.104.0",
         "pdf-parse": "^1.1.1",
         "puppeteer": "24.30.0",
         "puppeteer-core": "^21.3.8",
